--- a/src/components/Nav/index.module.scss
+++ b/src/components/Nav/index.module.scss
@@ -4,7 +4,6 @@
   padding: 1rem;
   box-shadow: 0 0 14px 0 #ccc;
   background-color: #fff;
-  margin-bottom: 4rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
