--- a/src/froms/FormConstruction/index.module.scss
+++ b/src/froms/FormConstruction/index.module.scss
@@ -1,11 +1,9 @@
 .container {
   background-color: #fff;
   width: min-content;
-  padding: 2rem 2rem 0rem 2rem;
-  margin: -2.1rem 0 -2rem -2.5rem;
 
   .iframe {
-    width: 213mm;
+    width: 210mm;
     height: 344mm;
   }
 }
